--- a/src/session/search-box/SearchResult.css
+++ b/src/session/search-box/SearchResult.css
@@ -2,7 +2,13 @@
     display: flex;
     padding: 5px;
     align-items: center;
+    justify-content: space-between;
+    width: 100%;
     /* height: 10vh; */
+}
+
+.search-result-item-song {
+    width: 90%;
 }
 
 .search-results {
@@ -25,7 +31,7 @@
 
 @media (max-width: 700px) {
     .search-results {
-        width: 60%;
-        left: 20%;
+        width: 80%;
+        left: 10%;
     }
 }
